# dbxmetagen

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  README.md.old  READMEn.md  databricks.yml  databricks_final.yml.tmp  databricks_variables.yml  deploy.py  deploy.py.py  deploy.sh  deploy_app.sh  deploy_web.sh  pyproject.toml  requirements.txt  requirements_dspy.txt  requirements_ner.txt  requirements_ner_option1.txt  requirements_ner_option2.txt  requirements_ner_option3.txt  requirements_ner_secure.txt  test.json  variables.yml
.github/workflows/: build.yml
.old_github/workflows/: build.yml
app/: README.md  app.py  app.yml  app_old.py  app_variables.yml  config.yml  job_manager.py  requirements.txt  setup_permissions.py  setup_permissions.sql  test_job_manager.py  utils.py  variables.yml
app/.streamlit/: config.toml
app/core/: __init__.py  config.py  data_ops.py  jobs.py  test_databricks_client_manager.py  user_context.py
app/ui/: __init__.py  components.py
benchmarks/: README.md  requirements.txt
benchmarks/data/: create_benchmark_schema.sql  sample_ground_truth.sql
configuration_files/: dbxmetagen-0.2.10-py3-none-any.whl  metadata_overrides.csv
dbxmetagen/: generate_metadata.py  generate_test_data.py.py  table_names.csv  table_names.txt
dbxmetagen/src/: config.py  prompts.py
dspy/: DSPY_INTEGRATION.md  README_DSPY.md  README_DSPY_TRAINING.md  dspy_training_quickstart.py
dspy/docs/: NER_PII_DETECTION.md
dspy/examples/: dspy_usage_example.py
notebooks/: analyze_table_all_columns.ipynb  generate_metadata.py  gliner_security_analysis.py  identify_and_classify_pi.py  log_and_register_model.py  log_and_register_model_as_code.py  metadata_overrides.csv  scratch.py  security_assessment.py  sync_reviewed_ddl.ipynb  sync_reviewed_ddl.py  table_names.csv  unstructured_identification_and_redaction.py  unstructured_pii_redaction.py
notebooks/models/: evaluate_model.py  log_and_register_model.py
notebooks/utilities/: analyze_table_all_columns.ipynb  generate_life_sciences_data.py  scratch.ipynb
resources/: app_variables.yml  secrets.yml
resources/apps/: dbxmetagen_app.yml
resources/jobs/: dspy_training.job.yml  generate_test_data.job.yml  metagen.job.yml  permissions_setup.job.yml
resources/schemas/: test_schema.yml
resources/tables/: control_table.yml
resources/variables/: variables.yml
src/dbxmetagen/: __init__.py  add_model.py  chat_client.py  comment_generator.py  comment_summarizer.py  config.py  databricks_utils.py  ddl_regenerator.py  deterministic_pi.py  dspy_comment_generator.py  dspy_prompts.py  enhanced_factory.py  error_handling.py  main.py  metadata_generator.py  model_logging.py  overrides.py  parsing.py  processing.py  prompts.py  regenerate_reviewed_ddl.py  sampling.py  user_utils.py
src/fixtures/: table_names.csv
tests/: run_unit_tests.ipynb  test_dspy_integration.py
unstructured_detection/: README.md  balanced_ner_implementation.py  claude_phi_model.py  hipaa_compliant_redaction.py  phi_compliance_redaction.py  presidio_only_alternative.py  two_stage_medical_pii_detection.py  unstructured_identification_and_redaction.py
(+28 files in other folders)
