[tool.poetry]
name = "dbxmetagen"
version = "0.2.8"
description = "Generates comments and other metadata for Delta tables in Databricks."
readme = "README.md"
authors = ["Eli Swanson <eli.swanson@databricks.com>", "James McCall <james.mccall@databricks.com>"]
maintainers = ["Eli Swanson <eli.swanson@databricks.com>"]
license = "DB License"
requires-poetry = "==2.0.*"
packages = [
    { include = "dbxmetagen", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10.12, <=3.13.0"
numpy = ">=2.1.0"
databricks-sdk = ">=0.39"
mlflow = "==2.18.0"
databricks_vectorsearch = ">=0.23"
overrides = ">=7.7.0"
nest-asyncio = ">=1.5.6"
pkginfo = ">=1.10.0"
openai = "==1.56.1"
cloudpickle = "==3.1.0"
transformers = "==4.46.3"
torchvision = "==0.20.1"
torch = ">=2.5.1"
pydantic = "==2.9.2"
pytest = ">=8.3.4"
typing-extensions = "^4.12.2"
ydata-profiling = "^4.12.1"

[tool.poetry.scripts]
main = "dbxmetagen.main:main"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
